--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,13 +38,40 @@ h1{
 }
 
 footer{
-	background-color: black;
+	position: relative;
+	background-color: lightgrey;
+}
+
+h2{
+	font-family: Bree Serif, "serif";
+ 	font-size: 2em;
+	text-align: center;
+}
+
+a {
+	text-decoration: none;
+}
+
+.icon {
+	height: 40px;
+	width: 40px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 40px;
+
 }
 
 .mapa {
 	background-size: cover;
 	width: 600px;
-	height: 400px;
+	height: 300px;
 	border: solid;
 	border-color: grey;
+}
+
+.redes {
+	text-align: center;
+	position: absolute;
+	left: 650px;
+	top: 50px;
 }
