--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,4 +117,17 @@ figcaption{
 .orientacion{
 	float: left;
 	margin-right: 5px;
-}
+}*/
+
+.parrafo{font-family: Arial, "serif";
+        font-size: 0.8em;
+        text-align: center;
+        color: white;
+        background: rgba(0,0,0,0.3);
+        margin-top: 200px;
+        padding: 45px;
+        line-height:1.5em;
+		width: 80%;
+		margin-right:auto;
+		margin-left: auto;
+    	}
